--- a/src/Site/MainBundle/Resources/config/routing/backend/main.yml
+++ b/src/Site/MainBundle/Resources/config/routing/backend/main.yml
@@ -30,6 +30,10 @@ backend_block:
     resource: "@SiteMainBundle/Resources/config/routing/backend/block.yml"
     prefix: /block
 
+backend_our_work:
+    resource: "@SiteMainBundle/Resources/config/routing/backend/our_work.yml"
+    prefix: /our_work
+
 backend_element:
     resource: "@SiteMainBundle/Resources/config/routing/backend/element.yml"
     prefix: /element
